Fix footer position issue on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -41,13 +41,17 @@
     height: 1546px;
   }
 
-  .content {
-    height: calc(100vh - 74px);
+  .container {
+    padding-bottom: 180px;
+    position: relative;
   }
 
   .footer-container {
     height: 180px;
     background-color: black;
+    position: absolute;
+    width: 100%;
+    bottom: 0;
   }
 
   .sm-link {
